# orna-atlass

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  docker-compose.https.yml  docker-compose.server.yml  docker-compose.yml  pyproject.toml
.agents/: context-map.toml
.agents/roles/: README.md  architect.md  backend.md  documentation.md  frontend.md  security.md  test.md
.github/workflows/: ci.yml
deploy/: nginx.conf.template
docs/: ARCHITECTURE.md  ARCHITECTURE_rus.md  CONVERSION_ANALYTICS.md  CURRENT_STATE.md  DOMAIN_RULES.md  IMPLEMENTATION_PLAN_rus.md  PERFORMANCE_BASELINE.md  PROJECT_REVIEW_REMEDIATION_RU.md  PROJECT_REVIEW_RU.md  PROJECT_REVIEW_RU_APPENDIX.md  UX_FUNNEL_SPEC_RU.md
docs/adr/: 0001-public-coordinate-projection.md  0002-fail-closed-playback.md  0003-versioned-media-assets.md  0004-service-owned-transactions.md  0005-segmented-hls-playback.md  0006-repository-native-agent-governance.md  README.md
docs/architecture/: BOUNDARIES.md  CONTEXT_SUPPLY_CHAIN.md  README.md
evals/: README.md  manifest.toml
evals/architecture/: README.md  adr-policy.toml
evals/performance/: README.md
evals/prompt/: README.md
evals/ui/: README.md
orna_atlas/app/: main.py  seed_atlas.py
scripts/: __init__.py  build_agent_context.py  check_adr_policy.py  check_agent_harness.py  check_architecture.py  run_agent_evals.py
specs/: README.md  TEMPLATE.md
tests/integration/: test_account_library.py  test_dependencies.py  test_domain_constraints.py  test_pipeline_resilience.py  test_postgis_atlas.py  test_public_privacy_api.py  test_search_pagination.py  test_seed_safety.py
web/: eslint.config.mjs  next.config.mjs  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json
web/app/: layout.tsx  page.tsx  styles.css
web/components/: analytics-bridge.tsx  analytics-link.tsx  featured-sessions.tsx  home-listening-sample.tsx  (+4 more)
(+187 files in other folders)
